# locust-launcher

./: README.md  launcher.py  pyproject.toml  readme.md
configs/: api_user_rampup.yml  api_user_spike.yml  api_user_step_by_step.yml  api_user_step_by_step.yml.example  api_user_wave.yml  api_user_wave.yml.example
locustfiles/: api_user.py
shapes/: base.py  ramp_up_shape.py  spike_shape.py  step_by_step_shape.py  wave_shape.py
